# web-video-compressor

./: .gitignore  AGENTS.md  README.md  astro.config.mjs  package-lock.json  package.json
.playwright-mcp/: page-2026-06-08T16-16-08-051Z.yml  page-2026-06-08T16-18-59-888Z.yml  page-2026-06-10T15-48-50-260Z.yml
scripts/: build-web.js  package-mac.js  prepare-tauri-resources.js  prepare-web-assets.js  verify-web-build.js  verify-web-url.js
src/: encoder.js  main.js  preload.js  sleep-blocker.js  tools.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  encoder.rs  lib.rs  main.rs  sleep_blocker.rs  tools.rs
src/renderer/: browser-adapter.js  export-plan.js  index.html  renderer.js  styles.css  tauri-adapter.js  zip-download.js
test/: browser-adapter.test.js  encoder.test.js  export-plan.test.js  package-mac.test.js  sleep-blocker.test.js  tauri-adapter.test.js  tools.test.js  zip-download.test.js
webflow/pages/: index.astro
