[package]
name = "web-video-compressor"
version = "0.1.0"
edition = "2021"

[lib]
name = "web_video_compressor"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2.5.4"

[dev-dependencies]
tempfile = "3"
